--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.8.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "exceljs": "^4.4.0",
     "luxon": "^3.5.0",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
