fix: update backend files

--- a/.env.producction
+++ b/.env.producction
@@ -1,16 +1,14 @@
 DB_HOST=localhost
-DB_NAME=forotis_bd
-DB_USERNAME=forotis_perumin
-DB_PASSWORD=Mathias9923*.
+DB_NAME=world_mining_congress
+DB_USERNAME=iimp_2026
+DB_PASSWORD=immp_wmc_2026.
 DB_PORT=5432
 OTP_EXPIRATION_TIME_IN_SECONDS=300
 SEND_MAIL_NOTIFICATIONS=true
-JWT_SECRET=0YAydIh3CbDx777
-# EMAIL_PASSWORD=wixqnvuhgveqikly
-# EMAIL_USER=forotis@iimp.org.pe
-EMAIL_PASSWORD=rlfdfijblzngbfqk
-EMAIL_USER=proexplo@iimp.org.pe
+JWT_SECRET=fjaapZLdvj3ePKyt6TYxYJ1V+iH2hfEARtGH1Bg3XDE
+EMAIL_PASSWORD=mzhnxmwupuuadcdf
+EMAIL_USER=WMC2026authors@iimp.org.pe
 PORT=4000
-APP_URL=https://forotis.perumin.com
-HOST_URL=https://backend-forotis.perumin.com
+APP_URL=https://papers.wmc2026.org
+HOST_URL=https://backend-papers.wmc2026.org
 STORAGE_PATH=static/multimedia
