--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.8.1",
+    "bcrypt": "^6.0.0",
+    "buffer-equal-constant-time": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "exceljs": "^4.4.0",
